radware/zion/Jun8/ingress/solution1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hostbased

spec:
  ingressClassName: nginx
  rules:
  # change the IP below based on the DNS resolution of your LB (under kubectl get svc -n ingress-nginx)
  - host: bear.54.73.182.144.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: bear-svc
             port:
                number: 80
  - host: moose.54.73.182.144.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: moose-svc
             port:
                number: 80              
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: animals
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # We strip the prefix before it passes to our backend or our app wont load as it will get route /bears instead /

spec:
  ingressClassName: nginx
  rules:
  - host: animals.54.73.182.144.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: moose-svc
             port:
                number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
             name: bear-svc
             port:
                number: 80         
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-animals
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # We strip the prefix before it passes to our backend or our app wont load as it will get route /bears instead /

spec:
  ingressClassName: nginx
  rules:
  - host: my-animals.54.73.182.144.nip.io
    http:
      paths:
      - path: /moose(/|$)(.*)
        pathType: Prefix
        backend:
          service:
             name: moose-svc
             port:
                number: 80
      - path: /bear(/|$)(.*)
        pathType: Prefix
        backend:
          service:
             name: bear-svc
             port:
                number: 80
